src/main/default/objects/UrlMappingItem__mdt/UrlMappingItem__mdt.object-meta.xml
<CustomObject>
    <description>Populated with fields to create urls</description>
    <label>Url Mapping Item</label>
    <pluralLabel>Url Mapping Items</pluralLabel>
</CustomObject>