src/main/default/objects/UrlMappingItem__mdt/fields/ParameterValue__c.field-meta.xml
<CustomField>
    <fullName>ParameterValue__c</fullName>
    <description>Parameter value for url lnk</description>
    <label>Parameter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>