src/main/default/objects/UrlMappingItem__mdt/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <description>Source Field data</description>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>