src/main/default/objects/UrlMappingItem__mdt/fields/StaticValue__c.field-meta.xml
<CustomField>
    <fullName>StaticValue__c</fullName>
    <description>Static parameter values for url</description>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>