src/main/default/objects/UrlMappingItem__mdt/fields/UrlMappingItems__c.field-meta.xml
<CustomField>
    <fullName>UrlMappingItems__c</fullName>
    <description>Parent Mandate Url</description>
    <label>Url Mapping Items</label>
    <referenceTo>UrlMapping__mdt</referenceTo>
    <relationshipLabel>Url Mapping Items</relationshipLabel>
    <relationshipName>UrlMappingItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>